# better-curler

./: .context.json  .envrc  .gitignore  README.md  pyproject.toml  shell.nix
curler/: __init__.py
examples/: login.py
test/: test_basic.py  test_params.py  utils.py
