[tool.poetry]
name = "better-curler"
version = "0.1.0"
description = ""
authors = ["Jani Mustonen <janijohannes@kapsi.fi>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "curler", from = "." }]

[tool.poetry.dependencies]
python = ">=3.8"
httpx = "^0.27.0"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
